@@ -27,6 +27,7 @@ HEADER = r'''%% Generated by Sphinx.
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage[colorlinks,breaklinks]{hyperref}
+\usepackage{tabularx}
 \title{%(title)s}
 \date{%(date)s}
 \release{%(release)s}
@@ -761,6 +762,53 @@ class LaTeXTranslator(nodes.NodeVisitor):
                 done = 1
         if not done:
             self.body.append('\\end{quote}\n')
+
+    # option node handling copied from docutils' latex writer
+
+    def visit_option(self, node):
+        if self.context[-1]:
+            # this is not the first option
+            self.body.append(', ')
+    def depart_option(self, node):
+        # flag that the first option is done.
+        self.context[-1] += 1
+
+    def visit_option_argument(self, node):
+        """The delimiter betweeen an option and its argument."""
+        self.body.append(node.get('delimiter', ' '))
+    def depart_option_argument(self, node):
+        pass
+
+    def visit_option_group(self, node):
+        self.body.append('\\item [')
+        # flag for first option
+        self.context.append(0)
+    def depart_option_group(self, node):
+        self.context.pop() # the flag
+        self.body.append('] ')
+
+    def visit_option_list(self, node):
+        self.body.append('% [option list]\n')
+        self.body.append('\\begin{optionlist}{3cm}\n')
+    def depart_option_list(self, node):
+        self.body.append('\\end{optionlist}\n')
+
+    def visit_option_list_item(self, node):
+        pass
+    def depart_option_list_item(self, node):
+        pass
+
+    def visit_option_string(self, node):
+        pass
+    def depart_option_string(self, node):
+        pass
+
+    def visit_description(self, node):
+        self.body.append( ' ' )
+    def depart_description(self, node):
+        pass
+
+    # text handling
 
     replacements = [
         (u"\\", u"\x00"),
